# py4eos

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg
docs/: build.sh  index.html
docs/py4eos/: index.html  srs.html
py4eos/: __init__.py
py4eos/tests/: test_formats.py  test_io.py
tests/: test_formats.py
